--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="header pro-base">
+    <div class="header pro-base" id="header">
         <div class="row">
             <div class="top-bar">
                 <ul>
@@ -656,7 +656,7 @@
                         </a>
                     </div>
                 </div>
-                <a href="/" class="back-to-top">
+                <a href="#header" class="back-to-top">
                     <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 32 32"
                         id="Lager_31" data-name="Lager 31">
                         <g id="Group_10" data-name="Group 10">
